--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,33 @@
+# Core dependencies
 numpy>=1.21.0
 datasets>=2.14.0
 tqdm>=4.65.0
+soundfile>=0.12.0
+
+# API clients
+openai>=1.0.0
+google-genai>=0.2.0
+
+# Audio and speech processing
+torch>=2.0.0
+torchaudio>=2.0.0
+torchcodec>=0.1.0
+librosa>=0.10.0
+pydub>=0.25.0
+speech_metrics>=0.2.0
+
+# NLP and transformers
+transformers>=4.30.0
+nltk>=3.8.0
+
+# Evaluation metrics
+qa_metrics>=0.2.0
+intervaltree>=3.1.0
+instruction_following_eval @ git+https://github.com/josejg/instruction_following_eval.git
+
+# Math and utilities
+scipy>=1.7.0
+regex>=2022.1.18
+
+# Optional but recommended
+python-dotenv>=0.19.0
